--- a/PokemonGo.Haxton.Console/App.config
+++ b/PokemonGo.Haxton.Console/App.config
@@ -4,18 +4,17 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <appSettings>
-    <!--Account type can be 'Google' or 'Ptc'-->
-    <add key="AccountType" value="Google" />
-    <add key="DefaultLatitude" value="34.01225777378286" />
-    <add key="DefaultLongitude" value="-118.49441528320311" />
+    <add key="AccountType" value="Ptc" />
+    <add key="DefaultLatitude" value="40,748412" />
+    <add key="DefaultLongitude" value="-73,985595" />
     <add key="DefaultAltitude" value="10" />
 
     <!--Only needed if you chose Google as your account type-->
     <add key="GoogleEmail" value="google@gmail.com" />
     <add key="GooglePassword" value="googlepassword" />
     <!--Only needed if you chose Ptc as your account type-->
-    <add key="PtcUsername" value="ptcusername" />
-    <add key="PtcPassword" value="ptcpassword" />
+    <add key="PtcUsername" value="Lord_Catch" />
+    <add key="PtcPassword" value="Looser123" />
 
     <!--Logic settings-->
     <add key="KeepMinIvPercentage" value="95" />
@@ -24,12 +23,12 @@
     <add key="KeepPokemonsThatCanEvolve" value="false" />
     <add key="TransferDuplicatePokemon" value="true" />
     <add key="UsePokemonToNotCatchFilter" value="false" />
-    <add key="KeepMinDuplicatePokemon" value="1" />
+    <add key="KeepMinDuplicatePokemon" value="2" />
     <add key="PrioritizeIvOverCp" value="true" />
 
     <add key="UseLuckyEggs" value="false" />
     <add key="UseBurstMode" value ="true" />
-    <add key="EvolveAll" value="true" />
+    <add key="EvolveAll" value="false" />
 
     <!--Will ONLY evolve pokemon above your IV threshold-->
     <!--Unsupported at the moment-->
